modif nouveaux menus et contenus blog

--- a/public/blogs/infos-pratiques/index.html
+++ b/public/blogs/infos-pratiques/index.html
@@ -77,15 +77,41 @@
 à celui du Public qui seul recoit ce qui est donné.
 La question se pose alors: d&rsquo;où le Public voit-il? et aussi: qui joue?</p>
 
-<p>&ndash;&gt; par ici le Crowdfunding de TeDua sur HelloAsso.org: DONNEZ-VOUS, DONNEZ-NOUS! :-D
-<img src="/img/helloasso.png" alt="Crowdfunding sur HelloAsso" /></p>
-
 <p>Investir un espace d&rsquo;expression(s) éphémère:
 ancré matériellement dans le lieu physique du Cerisier,
 ancré émotionnellement dans la profondeur des échanges qui pourront s&rsquo;y produire.
-Pour que TeDua soit l&rsquo;association de ceux qui l&rsquo;habitent: au service de l&rsquo;intérêt personnel (oui, personnel) de chacun,
-exposé au yeux de l&rsquo;autre.
-Avec pour plateforme commune permanente: lE JEU!</p>
+Pour que TeDua soit l&rsquo;association de ceux qui l&rsquo;habitent: au service de l&rsquo;intérêt personnel (oui, personnel) de chacun, exposé au yeux de l&rsquo;autre.</p>
+
+<p>&ndash;&gt; par ici le Mécénat participatif de TeDua sur HelloAsso.org: DONNEZ-VOUS, DONNEZ-NOUS! :-D
+<img src="/img/helloasso.png" alt="Mécénat participatif sur HelloAsso" /></p>
+
+<p>Avec pour plateforme commune permanente: LE JEU!</p>
+
+<table>
+<thead>
+<tr>
+<th>QUI</th>
+<th>QUOI</th>
+<th>OÙ</th>
+<th>QUAND</th>
+<th>COMMENT</th>
+<th>POURQUOI</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td><a href="https://www.association-tedua.fr/blogs/artistes-et-faiseurs/">Artistes et Faiseurs</a></td>
+<td>Formation au jeu &amp; Créations: &ldquo;De l&rsquo;Enfance&rdquo; (tous publics) et &ldquo;Le clown et le fée&rdquo; (enfants et familles)</td>
+<td>Le Cerisier: <a href="https://www.openstreetmap.org/node/2501777908#map=16/44.8742/-0.5460">7-11 rue Joseph Brunet, à Bordeaux Bacalan</a></td>
+<td>Du Lundi 22 au Samedi 27 Octobre 2018, les portes s&rsquo;ouvrent tous les jours de 8h à 22h <a href="https://www.association-tedua.fr/blogs/chemins-de-la-semaine/">planning complet</a></td>
+<td>Tram B: arrêt Brandenburg, Bus: y en a. Nourriture: décidée spontanément ensemble chaque jour, organisée le mercredi midi et le samedi soir par les organisateurs</td>
+<td>L&rsquo;autre</td>
+</tr>
+</tbody>
+</table>
+
+<p>&ndash;&gt; Revenir vers <a href="https://www.association-tedua.fr/blogs/le-d%C3%A9j-diffuseurs-et-num%C3%A9rique/">l&rsquo;Atelier: Diffuseurs et Numérique </a></p>
 
                         </div>
                     </section>
