--- a/public/blogs/le-déj-diffuseurs-et-numérique/index.html
+++ b/public/blogs/le-déj-diffuseurs-et-numérique/index.html
@@ -80,7 +80,7 @@ Et là est précisément le pouvoir du diffuseur: d&rsquo;où l&rsquo;art doit-i
 
 <p>Le sujet du Numérique prend une place toujours plus importante dans tous les champs de l&rsquo;économie et de la création,
 si bien qu&rsquo;il est maintenant dépassé de le percevoir comme un effet de mode, ou une technologie de passage.
-En effet, c&rsquo;est bien d&rsquo;une révolution de l&rsquo;Écriture qu&rsquo;il s&rsquo;agit, et comme tout réseau enchevêtré d&rsquo;outils et d&rsquo;humains, c&rsquo;est l&rsquo;acte de création artistique et sa diffusion-mêmes qui s&rsquo;en retrouvent questionnés et mis à l&rsquo;épreuve afin de pouvoir trouver leur Public.</p>
+En effet, c&rsquo;est bien d&rsquo;une révolution de l&rsquo;Écriture<a href="https://www.association-tedua.fr/blogs/le-d%C3%A9j-diffuseurs-et-num%C3%A9rique/">l&rsquo;Atelier: Diffuseurs et Numérique </a> qu&rsquo;il s&rsquo;agit, et comme tout réseau enchevêtré d&rsquo;outils et d&rsquo;humains, c&rsquo;est l&rsquo;acte de création artistique et sa diffusion-mêmes qui s&rsquo;en retrouvent questionnés et mis à l&rsquo;épreuve afin de pouvoir trouver leur Public.</p>
 
 <p>Pour illustrer ces nouveaux usages, et continuer notre exploration de la place du Public dans le Jeu,
 nous invitons tous les diffuseurs de spectacle, artistes, associations de théâtre et d&rsquo;arts vivants, à venir écouter ,converser et découvrir de nouveaux outils pair-à-pair avec:</p>
@@ -102,20 +102,23 @@ nous invitons tous les diffuseurs de spectacle, artistes, associations de théâ
 </tr>
 
 <tr>
-<td>Grégoire XXXx, créateur d&rsquo;un logiciel Libre de cartographie de réseaux et d&rsquo;optimisation des tournées des groupes de musique</td>
+<td>Grégory Bahde, créateur d&rsquo;un logiciel Libre de cartographie de réseaux et d&rsquo;optimisation des tournées des groupes de musique</td>
 <td>Pour un témoignage des enjeux et idées poursuivies lors de la création de cet outil.</td>
 <td>Lyon</td>
 </tr>
 
 <tr>
-<td>Nicolas Bienvenu, , co-fondateur de la plateforme de diffusion de spectacles vivants de proximité &ldquo;À 2 pas de la scène&rdquo;</td>
+<td>Nicolas Bienvenu, professionnel de la culture &amp; ex-gérant de salle de spectacle vivants dans les Alpes</td>
+<td>Pour témoigner de son expérience et de sa vision comme co-fondateur de la plateforme de diffusion de spectacles vivants de proximité &ldquo;À 2 pas de la scène&rdquo;</td>
 <td>Paris</td>
-<td></td>
 </tr>
 </tbody>
 </table>
 
 <p>Sous le signe du partage de connaissances, d&rsquo;outils. d&rsquo;expériences vécues.</p>
+
+<p>&ndash;&gt; Revenir vers [<a href="https://www.association-tedua.fr/blogs/artistes-et-faiseurs/">les Artistes et Faiseurs</a>
+&ndash;&gt; Poursuivre la lecture vers <a href="https://www.association-tedua.fr/blogs/infos-pratiques/">les Infos Pratiques </a></p>
 
                         </div>
                     </section>
