--- a/public/blogs/chemins-de-la-semaine/index.html
+++ b/public/blogs/chemins-de-la-semaine/index.html
@@ -75,7 +75,9 @@
                             
                             <p>Stage de théâtre et Répétitions quotidiennes ouvertes au public, Création &amp; Spectacle grand public, Spectacle pour enfants, Apéritifs, Repas, Atelier de réflexion et conversation sur la Diffusion de spectacles&hellip; De l&rsquo;élève au maître. De l&rsquo;acteur au metteur en scène. Et toujours, au Public&hellip;</p>
 
-<p><img src="/img/pic02.jpg" alt="Planning de la semaine de TeDua au Cerisier" /></p>
+<p><img src="/img/pic02.jpg" alt="Planning" /></p>
+
+<p>&ndash;&gt; Poursuivre la lecture vers <a href="https://www.association-tedua.fr/blogs/artistes-et-faiseurs/">les Artistes et Faiseurs</a></p>
 
                         </div>
                     </section>
